--- a/package.json
+++ b/package.json
@@ -1,43 +1,60 @@
 {
-  "name": "zoom-clone",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.39",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "zoom-clone",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@elastic/datemath": "^5.0.3",
+		"@elastic/eui": "^85.0.0",
+		"@emotion/css": "^11.11.2",
+		"@emotion/react": "^11.11.1",
+		"@reduxjs/toolkit": "^1.9.5",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.39",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@zegocloud/zego-uikit-prebuilt": "^1.8.10",
+		"firebase": "^10.1.0",
+		"html2canvas": "^1.4.1",
+		"jquery": "^3.7.1",
+		"moment": "^2.29.4",
+		"prop-types": "^15.8.1",
+		"react": "17.0.2",
+		"react-dom": "^17.0.2",
+		"react-redux": "^8.1.1",
+		"react-router-dom": "^6.14.2",
+		"react-scripts": "5.0.1",
+		"redux": "^4.2.1",
+		"typescript": "^4.9.5",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@types/react-redux": "^7.1.25"
+	}
 }
